--- a/second_swerve/v1.0/lib/README
+++ b/second_swerve/v1.0/lib/README
@@ -1,46 +1,47 @@
+# ライブラリについて
 
-This directory is intended for project specific (private) libraries.
-PlatformIO will compile them to static libraries and link into the executable file.
+これはこれはｻﾄﾞｳｽﾃｱを動かす時に使うために作った関数が入ってるよ
 
-The source code of each library should be placed in a separate directory
-("lib/your_library_name/[Code]").
+## PID
 
-For example, see the structure of the following example libraries `Foo` and `Bar`:
+- PID制御の式が入ってる
+- 汚いけど .h ファイルでゲイン調整
 
-|--lib
-|  |
-|  |--Bar
-|  |  |--docs
-|  |  |--examples
-|  |  |--src
-|  |     |- Bar.c
-|  |     |- Bar.h
-|  |  |- library.json (optional. for custom build options, etc) https://docs.platformio.org/page/librarymanager/config.html
-|  |
-|  |--Foo
-|  |  |- Foo.c
-|  |  |- Foo.h
-|  |
-|  |- README --> THIS FILE
-|
-|- platformio.ini
-|--src
-   |- main.c
+## SerialCtrl_OS6
 
-Example contents of `src/main.c` using Foo and Bar:
-```
-#include <Foo.h>
-#include <Bar.h>
+- これはすごい方が書いたPS4コントローラとの通信プログラム
 
-int main (void)
-{
-  ...
-}
+## conversion
 
-```
+- データを送信できる形にする関数（半分に分ける）
+  ex) [ 1001 0010 1111 1100 ] の時 [ 1001 0010 ](上位バイト)と[ 1111 1100 ](下位バイト)に分けて
+  それぞれ上位バイトは[ High_Byte ] に 下位バイトは[ Low_Byte ] に代入する関数
 
-The PlatformIO Library Dependency Finder will find automatically dependent
-libraries by scanning project source files.
+- データをCANで送って制御できる形にして返す（int16_t）
+  -10(A) ~ 10(A) を -16384 ~ 16384 の間のデータに変換する関数
 
-More information about PlatformIO Library Dependency Finder
-- https://docs.platformio.org/page/librarymanager/ldf.html
+## daikei
+
+- 2024のロボコンで先輩に描いてもらった台形制御のライブラリをArduinoからF446reで使えるようにした
+
+## func 
+
+- 今のところいらないので後で消すかも
+
+## mills
+
+- daikeiを使う際にArduinoのmills関数を使いたかったので自作した
+
+## my_encoder
+
+- エンコーダを読む際に呼び出す関数でmainに書くと長い
+
+## neutral
+
+- コントローラの値を調整して返す
+- -1~0~1の間で返す
+
+## steer 
+
+- １番の要
+- PIDを呼び出して計算を行う
